# cpp_starter_project

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  post-create-command.sh
.github/workflows/: build_cmake.yml
cmake/: Conan.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  TestingDependencies.cmake
source/: CMakeLists.txt  main.cpp
source/lib_template/: CMakeLists.txt
source/lib_template/include/lib_template/: lib_template.h
source/lib_template/src/: lib_template.cpp
source/lib_template/test/: CMakeLists.txt  test_lib_template_catch.cpp  test_lib_template_gtest.cpp
